--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-app",
+  "homepage": "https://github.com/perfectionist1/portfolio-raw-threejs/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
