--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "yarn run deploy"
+    "deploy": "vite build && gh-pages -d dist"  
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -25,6 +25,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "gh-pages": "^4.0.0",  
     "vite": "^4.0.0"
   }
 }
